Changed using Character object constructor to Character.valueOf() because apparently that is better